--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.13",
+    "babel-loader": "^8.2.2",
     "concurrently": "^5.3.0",
+    "core-js": "^3.8.3",
     "sass": "^1.32.6",
     "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0"
   },
+  "browserslist": [
+    "defaults"
+  ],
+  "main": "src/js/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "(sass src/scss:dist/css) & (webpack --config .webpack.config.js)",
