--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "A learning project created as part of the Netmatters SCS training programme.",
   "private": true,
   "dependencies": {
-    "@glidejs/glide": "^3.4.1",
-    "normalize.css": "^8.0.1"
-  },
-  "devDependencies": {
     "@babel/core": "^7.12.13",
+    "@babel/preset-env": "^7.12.13",
+    "@glidejs/glide": "^3.4.1",
     "babel-loader": "^8.2.2",
     "concurrently": "^5.3.0",
     "core-js": "^3.8.3",
-    "sass": "^1.32.6",
+    "normalize.css": "^8.0.1",
+    "sass": "^1.32.7",
     "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0"
   },
