--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@glidejs/glide": "^3.4.1",
     "babel-loader": "^8.2.2",
     "concurrently": "^5.3.0",
+    "copyfiles": "^2.4.1",
     "core-js": "^3.8.3",
     "normalize.css": "^8.0.1",
+    "onchange": "^7.1.0",
     "sass": "^1.32.7",
     "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0"
@@ -21,15 +23,26 @@
   "main": "src/js/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "(sass src/scss:dist/css) & (webpack --config .webpack.config.js)",
-    "watch": "concurrently \"webpack --config .webpack.config.js --watch\" \"sass src/scss:dist/css --watch\" --kill-others-on-fail"
+
+    "build-css": "sass src/scss:dist/css",
+    "build-js": "webpack --config .webpack.config.js",
+    "build-html": "copyfiles -u 1 \"src/*.html\" \"dist\"",
+    "build-assets": "copyfiles -u 1 \"assets/**/*\" \"dist\"",
+
+    "watch-css": "sass src/scss:dist/css --watch",
+    "watch-js": "webpack --config .webpack.config.js --watch",
+    "watch-html": "onchange \"src/*.html\" -- npm run html",
+    "watch-assets": "onchange \"assets/**/*\" -- npm run assets",
+
+    "watch": "concurrently --kill-others-on-fail \"npm:watch-*\"",
+    "prepare": "concurrently \"npm:build-*\""
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Anatta336/css-html-reflection.git"
   },
   "author": "Sam Driver",
-  "license": "ISC",
+  "license": "UNLICENSED",
   "bugs": {
     "url": "https://github.com/Anatta336/css-html-reflection/issues"
   },
