--- a/package.json
+++ b/package.json
@@ -25,23 +25,23 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-css": "sass src/scss:dist/css",
     "build-js": "webpack --config .webpack.config.js",
-    "build-html": "copyfiles -u 1 \"src/*.html\" \"dist\"",
+    "build-php": "copyfiles -u 1 \"src/**/*.php\" \"dist\"",
     "build-assets": "copyfiles -u 1 \"assets/**/*\" \"dist\"",
     "watch-css": "sass src/scss:dist/css --watch",
     "watch-js": "webpack --config .webpack.config.js --watch",
-    "watch-html": "onchange \"src/*.html\" -- npm run build-html",
+    "watch-php": "onchange \"src/**/*.php\" -- npm run build-php",
     "watch-assets": "onchange \"assets/**/*\" -- npm run build-assets",
     "watch": "concurrently --kill-others-on-fail \"npm:watch-*\"",
     "prepare": "concurrently \"npm:build-*\""
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Anatta336/css-html-reflection.git"
+    "url": "git+https://github.com/Anatta336/netmatters-reflection"
   },
   "author": "Sam Driver",
   "license": "UNLICENSED",
   "bugs": {
-    "url": "https://github.com/Anatta336/css-html-reflection/issues"
+    "url": "https://github.com/Anatta336/netmatters-reflection/issues"
   },
-  "homepage": "https://github.com/Anatta336/css-html-reflection#readme"
+  "homepage": "https://github.com/Anatta336/netmatters-reflection#readme"
 }
