--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
   "autoload": {
-    "classmap": [
-      "src/"
-    ]
+    "psr-4": {
+      "Netmatters\\": "src/"
+    }
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5"
