--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "A learning project created as part of the Netmatters SCS training programme.",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.12.13",
-    "@babel/preset-env": "^7.12.13",
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
     "@glidejs/glide": "^3.4.1",
     "babel-loader": "^8.2.2",
     "concurrently": "^5.3.0",
     "copyfiles": "^2.4.1",
-    "core-js": "^3.8.3",
+    "core-js": "^3.9.1",
     "normalize.css": "^8.0.1",
     "onchange": "^7.1.0",
-    "sass": "^1.32.7",
-    "webpack": "^5.21.2",
+    "sass": "^1.32.8",
+    "webpack": "^5.24.4",
     "webpack-cli": "^4.5.0"
   },
   "browserslist": [
@@ -25,12 +25,12 @@
     "test": ".\\vendor\\bin\\phpunit tests",
     "build-css": "sass src/scss:dist/css",
     "build-js": "webpack --config .webpack.config.js",
-    "build-php": "copyfiles -u 1 \"src/**/*.php\" \"dist\"",
+    "build-php": "copyfiles -u 1 \"src/*.php\" \"src/views/*.php\" \"dist\"",
     "build-html": "copyfiles -u 1 \"src/**/*.html\" \"dist\"",
     "build-assets": "copyfiles -u 1 \"assets/**/*\" \"dist\"",
     "watch-css": "sass src/scss:dist/css --watch",
     "watch-js": "webpack --config .webpack.config.js --watch",
-    "watch-php": "onchange \"src/**/*.php\" -- npm run build-php",
+    "watch-php": "onchange \"src/*.php\" \"src/views/*.php\" -- npm run build-php",
     "watch-html": "onchange \"src/**/*.html\" -- npm run build-html",
     "watch-assets": "onchange \"assets/**/*\" -- npm run build-assets",
     "watch": "concurrently --kill-others-on-fail \"npm:watch-*\"",
