--- a/package.json
+++ b/package.json
@@ -23,15 +23,13 @@
   "main": "src/js/index.js",
   "scripts": {
     "test": ".\\vendor\\bin\\phpunit tests",
-    "build-css": "sass src/scss:dist/css",
+    "build-css": "sass src/scss:public/css",
     "build-js": "webpack --config .webpack.config.js",
-    "build-php": "copyfiles -u 1 \"src/*.php\" \"src/views/*.php\" \"dist\"",
-    "build-html": "copyfiles -u 1 \"src/**/*.html\" \"dist\"",
-    "build-assets": "copyfiles -u 1 \"assets/**/*\" \"dist\"",
-    "watch-css": "sass src/scss:dist/css --watch",
+    "build-php": "copyfiles -u 1 \"src/*.php\" \"public\"",
+    "build-assets": "copyfiles -u 1 \"assets/**/*\" \"public\"",
+    "watch-css": "sass src/scss:public/css --watch",
     "watch-js": "webpack --config .webpack.config.js --watch",
-    "watch-php": "onchange \"src/*.php\" \"src/views/*.php\" -- npm run build-php",
-    "watch-html": "onchange \"src/**/*.html\" -- npm run build-html",
+    "watch-php": "onchange \"src/*.php\" -- npm run build-php",
     "watch-assets": "onchange \"assets/**/*\" -- npm run build-assets",
     "watch": "concurrently --kill-others-on-fail \"npm:watch-*\"",
     "prepare": "concurrently \"npm:build-*\" \"composer install\""
