--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   ],
   "main": "src/js/index.js",
   "scripts": {
-    "test": ".\\vendor\\bin\\phpunit tests",
+    "test": ".\\vendor\\bin\\phpunit tests\\src",
     "build-css": "sass src/scss:public/css",
     "build-js": "webpack --config .webpack.config.js",
     "build-php": "copyfiles -u 1 \"src/*.php\" \"public\"",
