--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "watch-php": "onchange \"src/*.php\" -- npm run build-php",
     "watch-assets": "onchange \"assets/**/*\" -- npm run build-assets",
     "watch": "concurrently --kill-others-on-fail \"npm:watch-*\"",
-    "prepare": "concurrently \"npm:build-*\" \"composer install\""
+    "prepare": "concurrently \"npm:build-*\" \"composer install\"",
+    "start": "php -S localhost:8000 -t public/"
   },
   "repository": {
     "type": "git",
